--- a/report/index.html
+++ b/report/index.html
@@ -151,7 +151,7 @@
 
     var marker = new mapboxgl.Marker()
       .setLngLat(coordinates)
-      .addTo(map);
+      .addTo(map);  // Add the marker to the map
 
     popupFormContainer.style.display = 'block';
 
