--- a/index.html
+++ b/index.html
@@ -40,13 +40,8 @@
             <p style="padding: 15px;">Observe the most recent wildfires in your vicinity.</p>
             <img src="undraw_spreadsheet_re_cn18.svg" width="120">
         </div>
-        <div class="livedata" ;>
-            <a href="./#/"><b style="font-size: 32px;">Live Sensor Data</b></a>
-            <p style="padding: 15px;">See the live sensor data from vulnerable places of Nepal.</p>
-            <img src="./undraw_real_time_sync_re_nky7.svg" width="120">
-        </div>
         <div class="predicted" ;>
-            <a href="./#/"><b style="font-size: 32px;">Vulnerability Map</b></a>
+            <a href="./vulnerability-map/"><b style="font-size: 32px;">Vulnerability Map</b></a>
             <p style="padding: 15px;">Visualized heatmap of predicted probability. The prediction is given by custom
                 model made and trained by the team.</p>
             <img src="./undraw_map_dark_re_36sy.svg" width="120">
